# iec61937-13

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
demo/: CMakeLists.txt  main_iec61937-13_decoder.cpp  main_iec61937-13_encoder.cpp
doc/: CMakeLists.txt  mainpage.md
include/: iec61937_dec.h  iec61937_enc.h
src/: CMakeLists.txt  iec61937_common.h  iec61937_dec.cpp  iec61937_enc.cpp
